first two columns get parsed